--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,7 +4,7 @@ html {
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
   font-size: inherit;
   font-weight: inherit;
   font-family: inherit;
@@ -91,7 +91,13 @@ a {
   outline: none;
   border: 1px solid #fff;
   background: none;
+  color: #fff;
   padding: .25em .25em .25em 1.5em;
+  width: 6em;
+}
+#navbar #search label input:active,
+#navbar #search label input:focus {
+  width: 12em;
 }
 #navbar #navigation {
   text-align: right;
@@ -106,9 +112,12 @@ a {
 #content {
   position: relative;
   display: block;
-  float: left;
-  width: 100%;
+  /*  float:left;*/
+  width: 1024px;
   padding: 0 4vw;
+  margin-left: auto;
+  margin-right: auto;
+  transform: rotate(360deg);
 }
 #content .menu {
   position: relative;
@@ -126,10 +135,12 @@ a {
   width: 100%;
   height: 100%;
   opacity: 1;
+  transform: rotate(0deg);
 }
 #content .menu .menu-title {
   padding: 1em;
   line-height: 25px;
+  text-align: left;
 }
 #content .action {
   white-space: normal;
@@ -161,6 +172,8 @@ a {
 #content .action .action-icon {
   height: 80px;
   width: 80px;
+  background-position: center;
+  background-repeat: no-repeat;
   margin-top: .5em;
 }
 #content .action.link-action .inner {
@@ -252,6 +265,46 @@ img {
   max-width: 100px;
   max-height: 100px;
 }
+.small_squares #content .menu li > a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+.small_squares #content .menu .action {
+  width: 160px;
+  height: 160px;
+}
+.small_squares #content .menu .action .action-icon {
+  height: 80px;
+  width: 80px;
+  margin-top: .5em;
+  margin-left: 1em;
+}
+.small_squares #content .menu .action .inner {
+  width: 150px;
+  height: 150px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+}
+.small_squares #content .menu .action .links {
+  width: 100px;
+  margin-top: -50px;
+}
+.small_squares #content .menu .action .links .link {
+  width: 100px;
+}
+.small_squares #content .menu .action .links .link.active {
+  height: 40px;
+}
+.small_squares #content .menu .action .links .prev,
+.small_squares #content .menu .action .links .next {
+  width: 25px;
+  height: 40px;
+  left: -25px;
+}
+.small_squares #content .menu .action .links .next {
+  left: 100px;
+}
 .large_squares #content .menu li > a {
   display: inline-block;
   width: 100%;
@@ -265,7 +318,7 @@ img {
   height: 120px;
   width: 120px;
   margin-top: 1em;
-  margin-left: 1em;
+  margin-left: 2.25em;
 }
 .large_squares #content .menu .action .inner {
   width: 200px;
@@ -293,7 +346,10 @@ img {
 .large_squares #content .menu .action .links .next {
   left: 140px;
 }
-@media screen and (max-width: 960px) {
+@media screen and (min-width: 400px) {
+  /*  body{
+    background:purple;
+  }*/
   #content .menu li > a {
     display: inline-block;
     width: 100%;
@@ -307,7 +363,7 @@ img {
     height: 120px;
     width: 120px;
     margin-top: 1em;
-    margin-left: 1em;
+    margin-left: 2.25em;
   }
   #content .menu .action .inner {
     width: 200px;
@@ -335,16 +391,24 @@ img {
   #content .menu .action .links .next {
     left: 140px;
   }
+  #content {
+    width: 400px;
+  }
   #content .menu {
-    max-width: 660px;
+    white-space: normal;
+    max-width: 400px;
+    text-align: center;
+    /*      left:50%;
+      margin-left:-200px;*/
+  }
+  #content .menu .action {
+    text-align: left;
   }
 }
-@media screen and (min-width: 960px) {
-  #content .menu {
-    /*      background:red;*/
-  }
-}
-@media screen and (min-width: 1320px) {
+@media screen and (min-width: 740px) {
+  /*  body{
+    background:red;
+  }*/
   #content .menu li > a {
     display: inline-block;
     width: 100%;
@@ -358,7 +422,158 @@ img {
     height: 120px;
     width: 120px;
     margin-top: 1em;
+    margin-left: 2.25em;
+  }
+  #content .menu .action .inner {
+    width: 200px;
+    height: 200px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+  }
+  #content .menu .action .links {
+    width: 140px;
+    height: 56px;
+    margin-top: -76px;
+  }
+  #content .menu .action .links .link {
+    width: 140px;
+  }
+  #content .menu .action .links .link.active {
+    height: 56px;
+  }
+  #content .menu .action .links .prev,
+  #content .menu .action .links .next {
+    width: 30px;
+    height: 56px;
+    left: -30px;
+  }
+  #content .menu .action .links .next {
+    left: 140px;
+  }
+  #content {
+    width: 740px;
+  }
+  #content .menu {
+    white-space: normal;
+    max-width: 740px;
+  }
+}
+@media screen and (min-width: 960px) {
+  /*  body{
+    background:lime;
+  }
+*/
+  #content .menu li > a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+  }
+  #content .menu .action {
+    width: 160px;
+    height: 160px;
+  }
+  #content .menu .action .action-icon {
+    height: 80px;
+    width: 80px;
+    margin-top: .5em;
     margin-left: 1em;
+  }
+  #content .menu .action .inner {
+    width: 150px;
+    height: 150px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+  }
+  #content .menu .action .links {
+    width: 100px;
+    margin-top: -50px;
+  }
+  #content .menu .action .links .link {
+    width: 100px;
+  }
+  #content .menu .action .links .link.active {
+    height: 40px;
+  }
+  #content .menu .action .links .prev,
+  #content .menu .action .links .next {
+    width: 25px;
+    height: 40px;
+    left: -25px;
+  }
+  #content .menu .action .links .next {
+    left: 100px;
+  }
+  #content {
+    width: 960px;
+    float: left;
+  }
+  #content .menu {
+    white-space: nowrap;
+    text-align: left;
+  }
+}
+@media screen and (min-width: 1320px) {
+  /*  body{
+    background:yellow;
+  }*/
+  #content .menu li > a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+  }
+  #content .menu .action {
+    width: 220px;
+    height: 220px;
+  }
+  #content .menu .action .action-icon {
+    height: 120px;
+    width: 120px;
+    margin-top: 1em;
+    margin-left: 2.25em;
+  }
+  #content .menu .action .inner {
+    width: 200px;
+    height: 200px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+  }
+  #content .menu .action .links {
+    width: 140px;
+    height: 56px;
+    margin-top: -76px;
+  }
+  #content .menu .action .links .link {
+    width: 140px;
+  }
+  #content .menu .action .links .link.active {
+    height: 56px;
+  }
+  #content .menu .action .links .prev,
+  #content .menu .action .links .next {
+    width: 30px;
+    height: 56px;
+    left: -30px;
+  }
+  #content .menu .action .links .next {
+    left: 140px;
+  }
+  #content {
+    width: 100%;
+  }
+  #content .menu li > a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+  }
+  #content .menu .action {
+    width: 220px;
+    height: 220px;
+  }
+  #content .menu .action .action-icon {
+    height: 120px;
+    width: 120px;
+    margin-top: 1em;
+    margin-left: 2.25em;
   }
   #content .menu .action .inner {
     width: 200px;
