--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -2,7 +2,7 @@ html{
   box-sizing: border-box;
 }
 *, *:before, *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
   font-size:inherit;
   font-weight:inherit;
   font-family:inherit;
@@ -81,7 +81,13 @@ a{
       outline:none;
       border:1px solid #fff;
       background:none;
+      
+      color:#fff;
       padding:.25em .25em .25em 1.5em;
+      width:6em;
+      &:active,&:focus{
+        width:12em;
+      }
     }
   }
   #navigation{
@@ -98,9 +104,12 @@ a{
 #content{
   position:relative;
   display:block;
-  float:left;
-  width:100%;
+/*  float:left;*/
+  width:1024px;
   padding:0 4vw;
+  margin-left:auto;
+  margin-right:auto;
+  transform:rotate(360deg);
   .menu{
     position:relative;
     white-space:nowrap;
@@ -116,10 +125,13 @@ a{
       width:100%;
       height:100%;
       opacity:1;
+      transform:rotate(0deg);
     }
     .menu-title{
+      
       padding: 1em;
       line-height: 25px;
+      text-align:left;
     }
   }
   .action{
@@ -151,6 +163,8 @@ a{
     .action-icon{
       height:80px;
       width:80px;
+      background-position:center;
+      background-repeat:no-repeat;
       margin-top:.5em;
     }
     &.link-action{
@@ -239,6 +253,51 @@ img{
   max-height:100px;  
   
 }
+
+.small_squares{
+  #content{
+     .menu{
+        li > a{
+          display:inline-block;
+          width:100%;
+          height:100%;
+        }
+        .action{
+         width:160px;
+         height:160px;
+         .action-icon{
+           height:80px;
+           width:80px;
+           margin-top:.5em;
+           margin-left:1em;
+         }
+         
+         .inner{
+           width:150px;
+           height:150px;
+           padding-right:10px;
+           padding-bottom:10px;
+         }
+         .links{
+           width:100px;
+           margin-top:-50px;
+           .link{
+             width:100px;
+             &.active{ height:40px; }
+           }
+           .prev,.next{
+             width:25px;
+             height:40px;
+             left:-25px;
+           }
+           .next{
+             left:100px;
+           }
+         }
+       }
+    }
+  }  
+}
 .large_squares{
   #content{
      .menu{
@@ -254,7 +313,7 @@ img{
            height:120px;
            width:120px;
            margin-top:1em;
-           margin-left:1em;
+           margin-left:2.25em;
          }
          
          .inner{
@@ -285,24 +344,64 @@ img{
   }
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (min-width: 400px){
+/*  body{
+    background:purple;
+  }*/
   .large_squares;
   #content{
+    width:400px;
     .menu{
-      max-width:660px;
+      white-space:normal;
+      max-width:400px;
+      text-align:center;
+      .action{
+        text-align:left;
+      }
+/*      left:50%;
+      margin-left:-200px;*/
       
     }    
   }
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 740px) {
+/*  body{
+    background:red;
+  }*/
+  
+  .large_squares;
   #content{
+    width:740px;
     .menu{
-/*      background:red;*/
+      white-space:normal;
+      max-width:740px;
+    }    
+  }
+}
+
+@media screen and (min-width: 960px) {
+/*  body{
+    background:lime;
+  }
+*/  .small_squares;
+  #content{
+    width:960px;
+    float:left;
+    .menu{
+      white-space:nowrap;
+      text-align:left;      
     }    
   }
 }
 
 @media screen and (min-width: 1320px){
+/*  body{
+    background:yellow;
+  }*/
+  .large_squares;
+  #content{
+    width:100%;
+  }
   .large_squares;
 }
